--- a/TenderInfo/Views/SampleDelegation/SearchInfo.cshtml
+++ b/TenderInfo/Views/SampleDelegation/SearchInfo.cshtml
@@ -60,11 +60,10 @@
             weekStart: 1,
             todayBtn: 1,
             autoclose: 1,
-            todayHighlight: 1,
-            startView: 2,
-            minView: 2,
+            todayHighlight: true,
+            minView: 0,
             forceParse: 0,
-            format: 'yyyy-mm-dd'
+            format: 'yyyy-mm-dd hh:ii'
         });
 
         //搜索按钮
