--- a/TenderInfo/Views/ProgressInfo/TableInfoMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/TableInfoMaterial.cshtml
@@ -1,35 +1,34 @@
 ﻿<table id="bsTable"></table>
 <script>
     $(function () {
-        var pageRole = $("#userRole").text();
-
         var operateEvents = {
-            'click .edit': function (e, value, row, index) {
-                //$('#NewProgressModal').modal('show');
-            }
-        };
+            'click .editProgress': function (e, value, row, index) {
+                $("#EditProgressModal").modal("show");
 
-        var editTenderStartDateEvents = {
-            'click .editTenderDate': function (e, value, row, index) {
-                $("#tbxEditTenderDate").val("");
-                $("label.error").hide();
-                $(".error").removeClass("error");
+                $("#tbxProgressIDEdit").val(row.ProgressInfoID);
+                $("#tbxProgressTypeEdit").val($("#typeSearch").text());
 
-                $.post("/SampleDelegation/GetEditTenderDateLog", { "id": row.SampleDelegationID }, function (result) {
-                    var list = "";
-                    $.each(result, function (indexInArray, val) {
-                        list += "<tr><td>" + (indexInArray + 1) + "</td><td>" + val.InputPersonName + "</td><td>" + getJsonDateTime(val.InputDateTime) + "</td><td>" + val.LogContent + "</td></tr>";
-                    });
-                    $("#editTenderDateLogTable").empty().append(list);
-                });
+                $("#tbxProjectNameEdit").val(row.ProjectName);
+                $("#ddlProgressTypeChildEdit").val(row.ProgressTypeChild);
+                $("#tbxInvestPriceEdit").val(row.InvestPrice);
+                $("#tbxMaterialCountEdit").val(row.MaterialCount);
+                $("#tbxProjectResponsiblePersonEdit").val(row.ProjectResponsiblePersonName);
+                $("#tbxContractResponsiblePersonEdit").val(row.ContractResponsiblePerson);
 
-                $('#EditTenderDateModal').modal('show');
-                $("#lblOldTenderStartDate").text(getJsonDate(row.StartTenderDate));
-                $("#EditTenderDateInfoID").val(row.SampleDelegationID);
+                $("#tbxTechnicalSpecificationAddDateEdit").val(row.TechnicalSpecificationAddDate);
+                $("#tbxTechnicalSpecificationExplainEdit").val(row.TechnicalSpecificationExplain);
+                $("#tbxTechnicalSpecificationApproveDateEdit").val(row.TechnicalSpecificationApproveDate==null?"":getJsonDateShort(row.TechnicalSpecificationApproveDate));
+                $("#tbxSynthesizeEvaluationRuleApproveDateEdit").val(row.SynthesizeEvaluationRuleApproveDate==null?"":getJsonDateShort(row.SynthesizeEvaluationRuleApproveDate));
+                $("#tbxTenderProgramAuditDateEdit").val(row.TenderProgramAuditDate==null?"":getJsonDateShort(row.TenderProgramAuditDate));
 
-                if (pageRole == "样品检测业务员查看") {
-                    $("#PanelEditTenderDate,#btnEditTenderDateSubmit").hide();
-                }
+                $("#tbxProgramAcceptDateEdit").val(row.ProgramAcceptDate==null?"":getJsonDateShort(row.ProgramAcceptDate));
+                $("#tbxTenderFileSaleStartDateEdit").val(row.TenderFileSaleStartDate==null?"":getJsonDateShort(row.TenderFileSaleStartDate));
+                $("#tbxTenderFileSaleEndDateEdit").val(row.TenderFileSaleEndDate==null?"":getJsonDateShort(row.TenderFileSaleEndDate));
+                $("#tbxTenderStartDateEdit").val(row.TenderStartDate==null?"":getJsonDateShort(row.TenderStartDate));
+                $("#tbxTenderSuccessFileDateEdit").val(row.TenderSuccessFileDate==null?"":getJsonDateShort(row.TenderSuccessFileDate));
+
+                $("#tbxOtherExplainEdit").val(row.OtherExplain);
+                $("#tbxRemarkEdit").val(row.Remark);
             }
         };
 
@@ -52,7 +51,8 @@
                         rowspan: 2,
                         colspan: 1,
                         width: 45,
-                        height:81,
+                        height: 81,
+                        //switchable: false,
                         valign: "middle",
                         visible: true
                     },
@@ -65,7 +65,7 @@
                         valign: "middle",
                         visible: true,
                         formatter: function (value, row, index) {
-                            return '<a class="edit" href="javascript: void (0)" title="edit">' + value + '</a>';
+                            return '<a class="editProgress" href="javascript:void (0)" title="编辑">' + value + '</a>';
                         },
                         events: operateEvents
                     },
@@ -85,7 +85,7 @@
                         title: '投资金额（万元）'
                     },
                     {
-                        field: 'ProjectResponsiblePerson',
+                        field: 'ProjectResponsiblePersonName',
                         rowspan: 2,
                         colspan: 1,
                         valign: "middle",
@@ -192,7 +192,7 @@
                 [
                     {
                         title: '',
-                        colspan:7,
+                        colspan: 7,
                         align: "center"
                     },
                     {
@@ -318,6 +318,117 @@
             return tempArray;
         };
 
+        function loadColumns3() {
+            var tempArray = [
+                {
+                    title: '序号',
+                    valign: "middle",
+                    formatter: function (value, row, index) {
+                        return index + 1;
+                    }
+                },
+                {
+                    field: 'ProgressInfoID',
+                    title: '数据ID',
+                    valign: "middle",
+                    visible: false
+                },
+                {
+                    field: 'ProgressTypeChild',
+                    title: '类型',
+                    valign: "middle",
+                    visible: true
+                },
+                {
+                    field: 'ProjectName',
+                    title: '拟招标项目名称或物资名称',
+                    valign: "middle",
+                    visible: true,
+                    formatter: function (value, row, index) {
+                        return '<a class="editProgress" href="javascript:void (0)" title="编辑">' + value + '</a>';
+                    },
+                    events: operateEvents
+                },
+                {
+                    field: 'IsOver',
+                    title: '是否已完成',
+                    valign: "middle",
+                    visible: false
+                },
+                {
+                    field: 'InvestPrice',
+                    valign: "middle",
+                    title: '投资金额（万元）'
+                },
+                {
+                    field: 'ProjectResponsiblePerson',
+                    valign: "middle",
+                    title: '招标项目负责人'
+                },
+                {
+                    field: 'ContractResponsiblePerson',
+                    valign: "middle",
+                    title: '合同签订部门项目责任人'
+                },
+                {
+                    field: 'MaterialCount',
+                    valign: "middle",
+                    title: '物资数量'
+                },
+                {
+                    field: 'TechnicalSpecificationAddDate',
+                    title: '技术规格书（技术文件、图纸等）提报时间'
+                },
+                {
+                    field: 'TechnicalSpecificationExplain',
+                    title: '技术规格书（技术文件、图纸等）对接需说明情况'
+                },
+                {
+                    field: 'TechnicalSpecificationApproveDate',
+                    title: '技术规格书（技术文件、图纸等）定稿时间'
+                },
+                {
+                    field: 'SynthesizeEvaluationRuleApproveDate',
+                    title: '综合法评标标准定稿时间'
+                },
+                {
+                    field: 'TenderProgramAuditDate',
+                    title: '招标方案联审时间'
+                },
+                {
+                    field: 'ProgramAcceptDate',
+                    title: '招标方案接收时间'
+                },
+                {
+                    field: 'TenderFileSaleStartDate',
+                    title: '发售招标文件开始日期'
+                },
+                {
+                    field: 'TenderFileSaleEndDate',
+                    title: '发售招标文件截止日期'
+                },
+                {
+                    field: 'TenderStartDate',
+                    title: '开标日期'
+                },
+                {
+                    field: 'TenderSuccessFileDate',
+                    title: '中标通知书发出时间'
+                },
+                {
+                    field: 'OtherExplain',
+                    valign: "middle",
+                    title: '其他需说明情况'
+                },
+                {
+                    field: 'Remark',
+                    valign: "middle",
+                    title: '备注'
+                }
+            ];
+            return tempArray;
+        };
+
         var columns = loadColumns();
 
         //初始化BS-Table
@@ -343,7 +454,7 @@
             minimumCountColumns: 2,             //最少允许的列数
             clickToSelect: false,                //是否启用点击选中行
             height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
-            uniqueId: "ProgressInfoID",                     //每一行的唯一标识，一般为主键列
+            uniqueId: "ProgressInfoID",          //每一行的唯一标识，一般为主键列
             showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
             cardView: false,                    //是否显示详细视图
             detailView: false,                   //是否显示父子表
@@ -351,8 +462,8 @@
             paginationNextText: "下一页",
             showExport: false,                     //是否显示导出
             columns: columns,
-            fixedColumns: true,
-            fixedNumber: 3
+            //fixedColumns: true,
+            //fixedNumber: 3
         })
             .on('all.bs.table', function (e, name, args) {
                 $('[data-toggle="tooltip"]').tooltip();
