--- a/TenderInfo/Views/Shared/_Layout.cshtml
+++ b/TenderInfo/Views/Shared/_Layout.cshtml
@@ -324,6 +324,14 @@
                 return date.getFullYear() + '年' + (date.getMonth() + 1) + '月' + date.getDate() + '日';
             }
 
+            //json日期格式化
+            function getJsonDateShort(jsonDate) {
+                var milliseconds = parseInt(jsonDate.replace(/\D/igm, ""));
+                var date = new Date(milliseconds);
+                var month = (date.getMonth() + 1);
+                return date.getFullYear() + '-' + (month < 10 ? "0" + month :month) + '-' + (date.getDate() < 10 ? ("0" + date.getDate()) : date.getDate());
+            }
+
 
             $(document).ready(function () {
                 $('.sidebar-menu').tree();
