--- a/TenderInfo/Views/ProgressInfo/SearchInfoProject.cshtml
+++ b/TenderInfo/Views/ProgressInfo/SearchInfoProject.cshtml
@@ -4,38 +4,39 @@
     <div class="col-md-12">
         <div class="form-inline">
             <div class="form-group">
-                <label for="tbxSampleNameSearch">类型：</label>
-                <select id="ddlProjectResponsiblePersonSearch" class="form-control">
-                    <option value="工程类" selected>工程类</option>
+                <label for="ddlProgressTypeChildSearch">类型：</label>
+                <select id="ddlProgressTypeChildSearch" class="form-control">
+                    <option value="" selected>全部</option>
+                    <option value="工程类">工程类</option>
                     <option value="劳保消防物资采购">劳保消防物资采购</option>
                     <option value="服务类">服务类</option>
                 </select>
             </div>
             <div class="form-group">
-                <label for="tbxSampleNameSearch">是否完成：</label>
-                <select id="ddlProjectResponsiblePersonSearch" class="form-control">
+                <label for="ddlIsOverSearch">是否完成：</label>
+                <select id="ddlIsOverSearch" class="form-control">
                     <option value="未完成" selected>未完成</option>
                     <option value="已完成">已完成</option>
                 </select>
             </div>
             <div class="form-group">
-                <label for="tbxSampleNameSearch">拟招标项目名称或物资名称：</label>
-                <input type="text" id="tbxSampleNameSearch" class="form-control" placeholder="项目名称或物资名称">
+                <label for="tbxProjectNameSearch">拟招标项目名称：</label>
+                <input type="text" id="tbxProjectNameSearch" class="form-control" placeholder="拟招标项目名称">
             </div>
             <div class="form-group">
-                <label for="ddlProjectResponsiblePersonSearch">招标负责人：</label>
+                <label for="ddlProjectResponsiblePersonSearch">招标项目负责人：</label>
                 <select id="ddlProjectResponsiblePersonSearch" class="form-control">
                     <option value="" selected>全部</option>
                 </select>
             </div>
             <div class="form-group">
-                <label for="tbxSampleNameSearch">合同签订部门项目责任人：</label>
-                <input type="text" id="tbxSampleNameSearch" class="form-control" placeholder="合同签订部门项目责任人">
+                <label for="tbxContractResponsiblePersonSearch">合同签订部门项目责任人：</label>
+                <input type="text" id="tbxContractResponsiblePersonSearch" class="form-control" placeholder="合同签订部门项目责任人">
             </div>
             <div class="form-group">
-                <label for="tbxStartTenderDateSearch">中标通知书发出时间：</label>
-                <input type="text" class="form-control" id="tbxStartTenderDateBeginSearch" placeholder="中标通知书发出时间开始">--
-                <input type="text" class="form-control" id="tbxStartTenderDateEndSearch" placeholder="中标通知书发出时间结束">
+                <label for="tbxTenderSuccessFileDateBeginSearch">中标通知书发出时间：</label>
+                <input type="text" class="form-control" id="tbxTenderSuccessFileDateBeginSearch" placeholder="中标通知书发出时间开始">--
+                <input type="text" class="form-control" id="tbxTenderSuccessFileDateEndSearch" placeholder="中标通知书发出时间结束">
             </div>
             <span id="typeSearch" class="hidden">@ViewData["type"]</span>
             <button type="button" id="btnSearch" class="btn btn-primary">
@@ -52,21 +53,39 @@
         var temp = {   //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
             limit: params.limit,   //页面大小
             offset: params.offset,  //页码
-            sampleName: $("#tbxSampleNameSearch").val(),//样品名称
-            sampleDelegationState: $("#ddlSampleDelegationStateSearch").val(),//进度，状态
-            startTenderDateBegin: $("#tbxStartTenderDateBeginSearch").val(),//开标日期开始
-            startTenderDateEnd: $("#tbxStartTenderDateEndSearch").val(),//开标日期结束
-            projectResponsiblePerson: $("#ddlProjectResponsiblePersonSearch").val()//招标项目负责人
+
+            progressType: $("#typeSearch").text(),//类型
+            progressTypeChild: $("#ddlProgressTypeChildSearch").val(),//子类型
+            isOver: $("#ddlIsOverSearch").val(),//是否完成
+            projectName: $("#tbxProjectNameSearch").val(),//物资名称或项目名称
+            projectResponsiblePerson: $("#ddlProjectResponsiblePersonSearch").val(),//招标项目负责人
+            contractResponsiblePerson: $("#tbxContractResponsiblePersonSearch").val(),//合同签订部门项目责任人
+            tenderSuccessFileDateBegin: $("#tbxTenderSuccessFileDateBeginSearch").val(),//中标通知书发出时间开始
+            tenderSuccessFileDateEnd: $("#tbxTenderSuccessFileDateEndSearch").val()//中标通知书发出时间结束
         };
         return temp;
     };
     $(document).ready(function () {
+        //加载项目负责人列表
+        GetProjectResponsiblePersonList();
+        function GetProjectResponsiblePersonList() {
+            $.post("/SampleDelegation/GetProjectResponsiblePersonList", "", function (result) {
+                var list = "";
+                $.each(result, function (indexInArray, valueOfElement) {
+                    list += "<option value='" + valueOfElement.UserID + "'>" + valueOfElement.UserName + "</option>";
+                });
+                console.log(list);
+                $("#ddlProjectResponsiblePersonSearch").append(list);
+            });
+        }
+
         //日期比较，返回true、false
         function CompareDate(d1, d2) {
             return ((new Date(d1.replace(/-/g, "\/"))) <= (new Date(d2.replace(/-/g, "\/"))));
         }
 
-        $("#tbxStartTenderDateBeginSearch,#tbxStartTenderDateEndSearch").datetimepicker({
+        //加载日期选择框
+        $("#tbxTenderSuccessFileDateBeginSearch,#tbxTenderSuccessFileDateEndSearch").datetimepicker({
             language: 'zh-CN',
             weekStart: 1,
             todayBtn: 1,
@@ -80,15 +99,15 @@
 
         //搜索按钮
         $("#btnSearch").click(function () {
-            var inputTimeStart = $("#tbxStartTenderDateBeginSearch").val();
-            var inputTimeEnd = $("#tbxStartTenderDateEndSearch").val();
+            var inputTimeStart = $("#tbxTenderSuccessFileDateBeginSearch").val();
+            var inputTimeEnd = $("#tbxTenderSuccessFileDateEndSearch").val();
             if (inputTimeStart != "" || inputTimeEnd != "") {
                 if (CompareDate(inputTimeStart, inputTimeEnd)) {
                     $("#bsTable").bootstrapTable('refresh');
                 }
                 else {
                     toastr.error("日期范围必须填写完整，结束日期必须大于开始日期！", "提示");
-                    $("#tbxStartTenderDateBeginSearch,#tbxStartTenderDateEndSearch").val("");
+                    $("#tbxTenderSuccessFileDateBeginSearch,#tbxTenderSuccessFileDateEndSearch").val("");
                 }
             }
             else {
@@ -98,7 +117,8 @@
 
         //重置按钮
         $("#btnReset").click(function () {
-            $("#tbxSampleNameSearch,#tbxStartTenderDateBeginSearch,#tbxStartTenderDateEndSearch,#ddlSampleDelegationStateSearch,#ddlProjectResponsiblePersonSearch").val("");
+            $("#ddlProgressTypeChildSearch,#tbxProjectNameSearch,#ddlProjectResponsiblePersonSearch,#tbxContractResponsiblePersonSearch,#tbxTenderSuccessFileDateBeginSearch,#tbxTenderSuccessFileDateEndSearch").val("");
+            $("#ddlIsOverSearch").val("未完成");
             $("#bsTable").bootstrapTable('refresh');
         });
     });
