--- a/TenderInfo/Views/ProgressInfo/ModalMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/ModalMaterial.cshtml
@@ -1,9 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "招标进度--工程、服务";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-<span id="userRole">
+﻿<span id="userRole">
     @if (User.IsInRole("招标管理"))
     {
         @:招标管理
@@ -26,9 +21,14 @@
                                     <div class="form-group">
                                         <label for="ddlProgressTypeChild">类型：</label>
                                         <select id="ddlProgressTypeChild" name="ddlProgressTypeChild" class="form-control">
-                                            <option value="工程类">工程类</option>
-                                            <option value="劳保消防物资采购">劳保消防物资采购</option>
-                                            <option value="服务类">服务类</option>
+                                            <option value="化工三剂" selected>化工三剂</option>
+                                            <option value="动设备">动设备</option>
+                                            <option value="静设备">静设备</option>
+                                            <option value="仪表及配件类">仪表及配件类</option>
+                                            <option value="电气及元件类">电气及元件类</option>
+                                            <option value="工矿材料类">工矿材料类</option>
+                                            <option value="劳保消防类">劳保消防类</option>
+                                            <option value="其他">其他</option>
                                         </select>
                                     </div>
                                 </div>
@@ -36,7 +36,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="tbxProjectName">拟招标项目名称<span class="text-danger">(必填)</span></label>
+                                        <label for="tbxProjectName">拟招标项目名称或物资名称<span class="text-danger">(必填)</span></label>
                                         <input id="tbxProjectName" name="tbxProjectName" type="text" class="form-control" />
                                     </div>
                                 </div>
@@ -78,17 +78,22 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="tbxProjectNameEdit">拟招标项目名称</label>
-                                        <input id="tbxProjectNameEdit" name="tbxProjectNameEdit" class="form-control input-sm" placeholder="拟招标项目名称" />
+                                        <label for="tbxProjectNameEdit">拟招标项目名称或物资名称</label>
+                                        <input id="tbxProjectNameEdit" name="tbxProjectNameEdit" class="form-control input-sm" placeholder="拟招标项目名称或物资名称" />
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="ddlProgressTypeChildEdit">类型</label>
                                         <select id="ddlProgressTypeChildEdit" name="ddlProgressTypeChildEdit" class="form-control input-sm">
-                                            <option value="工程类">工程类</option>
-                                            <option value="劳保消防物资采购">劳保消防物资采购</option>
-                                            <option value="服务类">服务类</option>
+                                            <option value="化工三剂" selected>化工三剂</option>
+                                            <option value="动设备">动设备</option>
+                                            <option value="静设备">静设备</option>
+                                            <option value="仪表及配件类">仪表及配件类</option>
+                                            <option value="电气及元件类">电气及元件类</option>
+                                            <option value="工矿材料类">工矿材料类</option>
+                                            <option value="劳保消防类">劳保消防类</option>
+                                            <option value="其他">其他</option>
                                         </select>
                                     </div>
                                 </div>
@@ -98,6 +103,12 @@
                                     <div class="form-group">
                                         <label for="tbxInvestPriceEdit">投资金额（万元）</label>
                                         <input id="tbxInvestPriceEdit" name="tbxInvestPriceEdit" class="form-control input-sm" placeholder="投资金额（万元）" />
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="tbxMaterialCountEdit">物资数量</label>
+                                        <input id="tbxMaterialCountEdit" name="tbxMaterialCountEdit" class="form-control input-sm" placeholder="物资数量" />
                                     </div>
                                 </div>
                             </div>
@@ -126,18 +137,46 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="tbxContractDeptContactDateEdit">
-                                                    接到合同签订部门（电话或邮件）时间
+                                                <label for="tbxTechnicalSpecificationAddDateEdit">
+                                                    技术规格书（技术文件、图纸等）提报时间
                                                 </label>
-                                                <textarea id="tbxContractDeptContactDateEdit" name="tbxContractDeptContactDateEdit" class="form-control input-sm" rows="3" cols="50"></textarea>
+                                                <textarea id="tbxTechnicalSpecificationAddDateEdit" name="tbxTechnicalSpecificationAddDateEdit" class="form-control input-sm" rows="3" cols="50"></textarea>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="tbxProjectExplainEdit">
-                                                    项目对接需说明情况
+                                                <label for="tbxTechnicalSpecificationExplainEdit">
+                                                    技术规格书（技术文件、图纸等）对接需说明情况
                                                 </label>
-                                                <textarea id="tbxProjectExplainEdit" name="tbxProjectExplainEdit" class="form-control input-sm" rows="3" cols="50"></textarea>
+                                                <textarea id="tbxTechnicalSpecificationExplainEdit" name="tbxTechnicalSpecificationExplainEdit" class="form-control input-sm" rows="3" cols="50"></textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                <label for="tbxTechnicalSpecificationApproveDateEdit">
+                                                    技术规格书（技术文件、图纸等）定稿时间
+                                                </label>
+                                                <input id="tbxTechnicalSpecificationApproveDateEdit" name="tbxTechnicalSpecificationApproveDateEdit" class="form-control input-sm" placeholder="定稿时间" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="tbxSynthesizeEvaluationRuleApproveDateEdit">
+                                                    综合法评标标准定稿时间
+                                                </label>
+                                                <input id="tbxSynthesizeEvaluationRuleApproveDateEdit" name="tbxSynthesizeEvaluationRuleApproveDateEdit" class="form-control input-sm" placeholder="综合法评标标准定稿时间" />
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="tbxTenderProgramAuditDateEdit">
+                                                    招标方案联审时间
+                                                </label>
+                                                <input id="tbxTenderProgramAuditDateEdit" name="tbxTenderProgramAuditDateEdit" class="form-control input-sm" placeholder="招标方案联审时间" />
                                             </div>
                                         </div>
                                     </div>
@@ -229,40 +268,13 @@
         </div>
     </div>
 </div>
-<div class="box box-danger">
-    <div class="box-header">
-        <h3 class="box-title">招标进度--工程、服务</h3>
-        <div class="box-tools pull-right">
-            <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="" data-original-title="collapse">
-                <i class="fa fa-minus"></i>
-            </button>
-        </div>
-    </div>
-    <div class="box-body">
-        @Html.Partial("SearchInfoProject", ViewData["type"] = "工程")
-        <hr />
-        <div class="row">
-            <div class="col-md-12">
-                @if (User.IsInRole("新建招标进度"))
-                {
-                    <div id="toolbar" class="btn-group">
-                        <button id="btnAdd" type="button" class="btn btn-info">
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 新增
-                        </button>
-                    </div>
-                }
-                @Html.Partial("TableInfoProject")
-            </div>
-        </div>
-    </div>
-</div>
 <script>
     $(function () {
         function ClearInfo() {
             $("#tbxContractResponsiblePerson,#tbxProjectName").val("");
         };
 
-        $("#tbxProgramAcceptDateEdit,#tbxTenderFileSaleStartDateEdit,#tbxTenderFileSaleEndDateEdit,#tbxTenderStartDateEdit,#tbxTenderSuccessFileDateEdit").datetimepicker({
+        $("#tbxTechnicalSpecificationApproveDateEdit,#tbxSynthesizeEvaluationRuleApproveDateEdit,#tbxTenderProgramAuditDateEdit,#tbxProgramAcceptDateEdit,#tbxTenderFileSaleStartDateEdit,#tbxTenderFileSaleEndDateEdit,#tbxTenderStartDateEdit,#tbxTenderSuccessFileDateEdit").datetimepicker({
             language: 'zh-CN',
             weekStart: 1,
             todayBtn: 1,
@@ -353,27 +365,6 @@
                     }
                 });
             };
-        });
-
-        //删除进度提交
-        $("#btnDelProgressSubmit").click(function () {
-            Ewin.confirm({ message: "确定要删除吗？" }).on(function (e) {
-                if (!e) {
-                    return;
-                }
-                else {
-                    $.post("/ProgressInfo/Del", { "id": $("#tbxProgressIDEdit").val() }, function (result) {
-                        if (result == "ok") {
-                            $("#EditProgressModal").modal("hide");
-                            toastr.success("操作成功！", "提示");
-                            $("#bsTable").bootstrapTable('refresh');
-                        }
-                        else {
-                            toastr.error(result, "提示");
-                        }
-                    });
-                }
-            });
         });
     });
 </script>
